--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/appBarLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#f4b350"
+        android:background="#F9D8A5"
         android:visibility="gone"
         android:theme="@style/Theme.CEON390ProjectGroup.AppBarOverlay"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,90 +82,116 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="30dp"
         android:layout_marginHorizontal="36dp"
+        android:layout_marginTop="56dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="@+id/relative_toolbar"
         app:layout_constraintStart_toStartOf="@+id/relative_toolbar"
         app:layout_constraintTop_toBottomOf="@+id/multiGauge">
 
         <LinearLayout
+            android:id="@+id/linear_outer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/linear_outer"
-            android:visibility="gone"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <RelativeLayout
                 android:layout_width="12dp"
                 android:layout_height="12dp"
-                android:background="@color/outer"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:background="@color/outer" />
 
             <TextView
                 android:id="@+id/tv_outer_gauge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
                 android:text="Outer Gauge"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                android:layout_marginStart="10dp"
-                android:layout_gravity="center"/>
+                android:textSize="16sp" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linear_middle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/linear_middle"
-            android:visibility="gone"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <RelativeLayout
                 android:layout_width="12dp"
                 android:layout_height="12dp"
-                android:background="@color/middle"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:background="@color/middle" />
 
             <TextView
                 android:id="@+id/tv_middle_gauge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
                 android:text="Middle Gauge"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                android:layout_marginStart="10dp"
-                android:layout_gravity="center" />
+                android:textSize="16sp" />
 
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linear_inner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:visibility="gone"
-            android:id="@+id/linear_inner"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <RelativeLayout
                 android:layout_width="12dp"
                 android:layout_height="12dp"
-                android:background="@color/inner"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:background="@color/inner" />
 
             <TextView
                 android:id="@+id/tv_inner_gauge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
                 android:text="Inner Gauge"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                android:layout_marginStart="10dp"
-                android:layout_gravity="center"/>
+                android:textSize="16sp" />
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/locationName"
+        android:layout_width="418dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="36dp"
+        android:textAlignment="center"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relative_toolbar" />
+
+    <TextView
+        android:id="@+id/roomName"
+        android:layout_width="416dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="20dp"
+        android:textAlignment="center"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/locationName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
